fix: Patch visual bug on mobile & tablet for create or edit article

--- a/src/components/atomes/ImageDrop/style.scss
+++ b/src/components/atomes/ImageDrop/style.scss
@@ -10,14 +10,18 @@
     
     > button {
         position: absolute;
-        top: 0;
-        right: 0;
-        width: 50px;
-        height: 50px;
+        top: 10px;
+        right: 10px;
         border: none;
         background: transparent;
         cursor: pointer;
         z-index: 20;
+
+        > svg {
+            width: 30px;
+            height: 30px;
+            fill: var(--white, #fff);
+        }
 
         &:hover {
             svg {
