--- a/src/components/atomes/Modal/variants/CAModal/style.scss
+++ b/src/components/atomes/Modal/variants/CAModal/style.scss
@@ -14,9 +14,10 @@
 
 .languages-row {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  gap: 20px;
   .languages {
     margin-top: 24px;
     display: flex;
@@ -48,20 +49,31 @@
     gap: 10px;
 
     input[type="checkbox"] {
-        margin: 0;
+      margin: 0;
     }
   }
 }
 
 .third-row {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   gap: 10px;
-  align-items: center;
 
   * {
     background-color: transparent !important;
     color: white !important;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .languages-row {
+    flex-direction: row;
+    gap: 0;
+  }
+
+  .third-row {
+    flex-direction: row;
+    align-items: center;
   }
 }
 
